<resources>
    <string name="app_name">UserProfile</string>
    <string name="textView_Name">Name:</string>
    <string name="textView_Email">Email:</string>
    <string name="textView_ID">ID:</string>
    <string name="textView_Dept">Dept:</string>
    <string name="buttonText_Submit">Submit</string>
    <string name="buttonText_Cancel">Cancel</string>
    <string name="buttonText_Select">Select</string>
    <string name="radioButton_CS">Computer Science</string>
    <string name="radioButton_SIS">Software Info. Systems</string>
    <string name="radioButton_BioInfo">Bio Infomatics</string>
    <string name="radioButton_DS">Data Science</string>
    <string name="editText_Name_hint">Enter Name</string>
    <string name="editText_Email_Hint">Enter Email</string>
    <string name="editText_ID_Hint">Enter ID</string>
    <string name="Main_ActionBar">Registration</string>
    <string name="Second_ActionBar">Department</string>
    <string name="Third_ActionBar">Profile</string>
</resources>