<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <RadioGroup
        android:id="@+id/radioGroup_Dept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_CS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_CS" />

        <RadioButton
            android:id="@+id/radioButton_SIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_SIS" />

        <RadioButton
            android:id="@+id/radioButton_Bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_BioInfo" />

        <RadioButton
            android:id="@+id/radioButton_DS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_DS" />
    </RadioGroup>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/gray"
        android:onClick="closeActivity"
        android:text="@string/buttonText_Cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_Select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray"
        android:onClick="sendDataBack"
        android:text="@string/buttonText_Select"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toEndOf="@+id/button_cancel"
        app:layout_constraintTop_toTopOf="@+id/button_cancel"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>